src/test/deca/context/invalid/cast-string-int.deca
// Description:
//    Cast un string en un int
//
// Resultats:
//    Ligne 11: Unable to cast type "string" to "int" (rule 3.39)
//
// Historique:
//    cree le 06/01/2023

{
    (int)("Je ne suis pas un entier");
}